--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -43,7 +43,7 @@ p {
 }
 
 .h-100 {
-  height 100%
+  height: 100%;
 }
 
 /*
@@ -117,8 +117,8 @@ H E A D E R
         display: block;
         font-size: 1.2rem;
         text-decoration: none;
-        color: _blue;
-        padding: 1.3rem 1rem;
+        color: _light_blue;
+        padding: 1.3rem 1rem 3px;
         margin: 0 0.4rem;
         text-transform: uppercase;
 
@@ -141,13 +141,20 @@ H E A D E R
         }
 
         &:hover {
-          color: _yellow;
-          background-color: _dark_red;
+          background-color: _dark_cyan;
         }
 
         &.active {
           background-color: _dark_cyan;
           color: _white;
+        }
+
+        .shortcut {
+          color: _red;
+
+          ../.active .shortcut {
+            color: _black;
+          }
         }
       }
     }
@@ -197,7 +204,7 @@ M A I N  C O N T E N T
 
 .home_page {
   h1 {
-    selection_transparent(_white)
+    selection_transparent(_yellow);
   }
 }
 
@@ -293,7 +300,7 @@ M A I N  C O N T E N T
   color: _yellow;
 
   h1 {
-    selection_color(_pink)
+    selection_color(_pink);
   }
 }
 
