Added Photos as a functional component.
The Photos component uses Hooks to work. \^o^/
Web styles broke down to files.
Working on CSS grid styles for Photos page.

--- a/src/styles/_variables.styl
+++ b/src/styles/_variables.styl
@@ -1,6 +1,9 @@
-// ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
-// Variables de color
-// ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+/*
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+V A R I A B L E S
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+ */
+// ---- Colores ----
 _black = #000000;
 _dark_grey = #555555;
 _grey = #AAAAAA;
@@ -17,3 +20,11 @@ _pink = #FF55FF;
 _dark_yellow = #AA5500;
 _yellow = #FFFF55;
 _white = #FFFFFF;
+
+// ---- Interpolations ----
+big-shadows = 2ch 2ch 0 0px _black; // la unidad ch es de “character width”
+shadows = 1ch 1ch 0 0px _black;
+scrollbar_bg = _blue;
+scrollbar_thumb = _cyan;
+cursor-arrow = url('../assets/images/arrow.png'), auto !important;
+cursor-pointing_hand = url('../assets/images/pointing_hand.png'), auto !important;
