--- a/src/styles/components/photos.styl
+++ b/src/styles/components/photos.styl
@@ -3,13 +3,25 @@
 P H O TO S
 ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
  */
+
+@import './overlay.styl'
+
+:root {
+  --column-span: 1;
+  --row-span: 1;
+}
+
 .photos_page {
-  background: _pink;
   display: grid;
-  gap: 20px;
   grid-template-columns: repeat(auto-fill, 100px);
   grid-auto-rows: 100px;
   grid-auto-flow: dense;
+  justify-content: center;
+
+  h1 {
+    grid-column: 1 / -1;
+    color: _pink;
+  }
 
   .photo {
     position: relative;
@@ -18,20 +30,47 @@ P H O TO S
     /* Para hacer el overlay sin usar position absolute en el hijo */
     overflow: hidden; /* Para que no se vea lo que queda por fuera del elemento */
     display: grid;
-    grid-template-columns: 1;
-    grid-template-rows: 1;
-  }
+    border: 4px double _pink;
 
-  .photo:hover {
-    cursor: pointer;
-  }
+    & * {
+      cursor: cursor-pointing_hand;
+    }
 
-  .photo img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    /* Para hacer el overlay sin usar position absolute en el hijo */
-    grid-column: 1 / -1;
-    grid-row: 1 / -1;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      /* Para hacer el overlay sin usar position absolute en el hijo */
+      grid-column: 1 / -1;
+      grid-row: 1 / -1;
+    }
+
+    .photo_hover {
+      visibility: hidden;
+      opacity: 0;
+      background: url(../assets/images/dither.png);
+      width: 100%;
+      transition: all 0.5s steps(3);
+      grid-column: 1 / -1;
+      grid-row: 1 / -1;
+      position: relative;
+      display: grid;
+      justify-items: center;
+      align-items: center;
+
+      ^[-1]:hover .photo_hover {
+        visibility: visible;
+        opacity: 1;
+      }
+
+      .photo_view {
+        color: _white;
+        padding: 5px;
+        border: 2px solid _white;
+        background: _blue;
+        width: 5rem;
+        text-align: center;
+      }
+    }
   }
 }
