--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -7,6 +7,7 @@
 @import 'content.styl';
 @import 'components/header.styl';
 @import 'components/footer.styl';
+@import 'components/home.styl';
 @import 'components/albums.styl';
 @import 'components/posts.styl';
 @import 'components/todos.styl';
